stage1: RegisteredCommit CM1/CM2 mailbox + redirect message chain
- ROBFIFOPlugin: 删 5 组旁路折叠(44 行 popCount 比较器锥),新增 dispatchWrittenReg
  陈旧投机读防护(设计书勘误#2,只索引 popPtr):旁路本承担功能正确性,空 ROB 快
  通道会以陈旧 complete=1 误 fire
- CommitPlugin: CM1 决策拍/CM2 执行拍重构;新增 CommitMailboxBundle(T→T+1 沿装载,
  R1: flush 拍禁装载);except/ARF/PRF/BTB/TLB/CSR/StoreBuffer/重定向全部改读邮箱;
  uncachedKick 随邮箱节奏晚 1 拍;FSM 留 CM1 加 !popStateStale(0)/!needFlush 防护
- 重定向: needFlush 驱动源随邮箱自然寄存化, GHR/BTB 更新走邮箱晚 1 拍
- 验证: 全核 mycpu_top SpinalSim(xpm/multiplier 行为模型 + AxiMemorySim),
  定向 LoongArch 程序覆盖空 ROB 误预测/背靠背误预测/flush 拍同拍封锁/flush 中段;
  每拍连续断言 popPtr 单调/flushMutex/recoverQuiet/noDoubleFlush/uncachedMutex/
  freeList 守恒; 内存自检 checksum=178 syscall=1 PASS; sbt test 全绿